# rust-rasterizer

./: .gitattributes  .pre-commit-config.yaml  Cargo.toml  README.md  index.html
.github/workflows/: deploy-web.yml
data/: rogland_sunset_4k.exr  vignaioli_night_2k.exr
doc/: ARCHITECTURE.md
src/: aabb.rs  camera.rs  gpu_scene.rs  hit.rs  hittable.rs  lib.rs  lights.rs  main.rs  material.rs  mesh.rs  ray.rs  scene.rs  sphere.rs  texture.rs  vec3.rs
src/shaders/: accumulate.wgsl  display.wgsl  raytracer.wgsl  raytracer_normals.wgsl
