[package]
name = "rust-raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
winit = "0.29"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"

[dev-dependencies]
tempfile = "3.8"
