[package]
name = "rust-raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
winit = "0.29"
egui = { version = "0.27", default-features = false, features = ["default_fonts"] }
egui-wgpu = { version = "0.27", default-features = false }
egui-winit = { version = "0.27", default-features = false, features = ["links"] }
log = "0.4"
cfg-if = "1.0"

# Enable wasm_js for getrandom (used by rand) on WASM targets
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
web-time = "1.1"
js-sys = "0.3"

[dev-dependencies]
tempfile = "3.8"
